--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- CSS personalizat -->
     <link rel="stylesheet" href="css/test.css">
+    <link rel="stylesheet" href="css/contact.css">
 </head>
 <body>
 
@@ -98,12 +99,46 @@
             </div>
         </div>
     </section>
+    <!-- END SECTIUNE CARDURI PACHETE -->
+
+    <!-- SECTIUNE CONTACT -->
+    <section id="contact" class="py-5">
+        <div class="container">
+            <h2 class="text-center mb-4">Contactează-ne</h2>
+            <div class="row justify-content-center">
+                <div class="col-md-8">
+                    <form id="contact-form" method="POST" action="php/contact.php">
+                        <div class="mb-3">
+                            <label for="name" class="form-label">Nume</label>
+                            <input type="text" class="form-control" id="name" name="name" required>
+                        </div>
+                        <div class="mb-3">
+                            <label for="email" class="form-label">Email</label>
+                            <input type="email" class="form-control" id="email" name="email" required>
+                        </div>
+                        <div class="mb-3">
+                            <label for="phone" class="form-label">Număr de telefon</label>
+                            <input type="tel" class="form-control" id="phone" name="phone" required>
+                        </div>
+                        <div class="mb-3">
+                            <label for="message" class="form-label">Mesaj</label>
+                            <textarea class="form-control" id="message" name="message" rows="5" required></textarea>
+                        </div>
+                        <div class="text-center">
+                            <button type="submit" class="button2 btn">Trimite mesajul</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- END SECTIUNE CONTACT -->
     
 
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Scriptul pentru gestionarea cardurilor -->
-    <script src="js/app.js"></script>
+    <script src="./js/app.js"></script>
     <!-- Script pt design -->
     <script src="js/design.js"></script>
 </body>
