Afisare mesaj alerta contact

--- a/index.html
+++ b/index.html
@@ -102,6 +102,10 @@
     <!-- END SECTIUNE CARDURI PACHETE -->
 
     <!-- SECTIUNE CONTACT -->
+    <div id="response-message">
+        <span id="message-content"></span>
+    </div>
+
     <section id="contact" class="py-5">
         <div class="container">
             <h2 class="text-center mb-4">Contactează-ne</h2>
